@@ -140,6 +140,7 @@ S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.randomForestSRC)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rknn)
+S3method(makeRLearner,classif.rotationForest)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.saeDNN)
@@ -294,6 +295,7 @@ S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.randomForestSRC)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rknn)
+S3method(predictLearner,classif.rotationForest)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.saeDNN)
@@ -496,6 +498,7 @@ S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.randomForestSRC)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rknn)
+S3method(trainLearner,classif.rotationForest)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.saeDNN)
