@@ -82,6 +82,7 @@ mlr_2.5:
 -- regr.rknn
 -- classif.xgboost
 -- regr.xgboost
+--classif.rotationForest
 
 - new filters
 -- permutation.importance
